--- a/Draw/Controller/Registration/RemoteDrawView~ipad.xib
+++ b/Draw/Controller/Registration/RemoteDrawView~ipad.xib
@@ -96,13 +96,14 @@
 						<float key="IBUIMinimumFontSize">20</float>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">24</double>
+							<double key="pointSize">22</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">24</double>
+							<double key="NSSize">22</double>
 							<int key="NSfFlags">16</int>
 						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIView" id="245986676">
 						<reference key="NSNextResponder" ref="798582094"/>
