--- a/Draw/Controller/Share/ShareController~iPad.xib
+++ b/Draw/Controller/Share/ShareController~iPad.xib
@@ -182,10 +182,10 @@
 					<object class="IBUILabel" id="822474594">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{158, 133}, {429, 45}}</string>
+						<string key="NSFrame">{{158, 277}, {429, 45}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="822060853"/>
+						<reference key="NSNextKeyView" ref="372283332"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -215,7 +215,7 @@
 					<object class="IBUIButton" id="533394264">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{595, 11}, {163, 80}}</string>
+						<string key="NSFrame">{{605, 21}, {143, 60}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="822474594"/>
@@ -225,19 +225,11 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUISelectedTitle">me</string>
-						<string key="IBUINormalTitle">all</string>
+						<string key="IBUINormalTitle">clear</string>
 						<reference key="IBUIHighlightedTitleColor" ref="309040052"/>
 						<reference key="IBUISelectedTitleColor" ref="309040052"/>
 						<reference key="IBUINormalTitleColor" ref="309040052"/>
 						<reference key="IBUINormalTitleShadowColor" ref="6944340"/>
-						<object class="NSCustomResource" key="IBUISelectedBackgroundImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">me@2x.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">all@2x.png</string>
-						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">24</double>
@@ -248,13 +240,13 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="822060853">
+					<object class="IBUIButton" id="372283332">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{164, 133}, {220, 60}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="335308572"/>
+						<reference key="NSNextKeyView" ref="66482057"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -264,17 +256,17 @@
 						<reference key="IBUIHighlightedTitleColor" ref="309040052"/>
 						<reference key="IBUINormalTitleColor" ref="309040052"/>
 						<reference key="IBUINormalTitleShadowColor" ref="6944340"/>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="180991531">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="291089218">
 							<int key="type">2</int>
 							<double key="pointSize">30</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="792308741">
+						<object class="NSFont" key="IBUIFont" id="1069767249">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">30</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="335308572">
+					<object class="IBUIButton" id="66482057">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{384, 133}, {220, 60}}</string>
@@ -290,8 +282,8 @@
 						<reference key="IBUIHighlightedTitleColor" ref="309040052"/>
 						<reference key="IBUINormalTitleColor" ref="309040052"/>
 						<reference key="IBUINormalTitleShadowColor" ref="6944340"/>
-						<reference key="IBUIFontDescription" ref="180991531"/>
-						<reference key="IBUIFont" ref="792308741"/>
+						<reference key="IBUIFontDescription" ref="291089218"/>
+						<reference key="IBUIFont" ref="1069767249"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
@@ -334,14 +326,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">paintsFilter</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="533394264"/>
-					</object>
-					<int key="connectionID">15</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">titleLabel</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="942335936"/>
@@ -352,7 +336,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">selectAllButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="822060853"/>
+						<reference key="destination" ref="372283332"/>
 					</object>
 					<int key="connectionID">23</int>
 				</object>
@@ -360,18 +344,26 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">selectMineButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="335308572"/>
+						<reference key="destination" ref="66482057"/>
 					</object>
 					<int key="connectionID">24</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">clearButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="533394264"/>
+					</object>
+					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">changeGalleryFielter:</string>
+						<string key="label">deleteAll:</string>
 						<reference key="source" ref="533394264"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">18</int>
+					<int key="connectionID">29</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -401,7 +393,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">selectAll:</string>
-						<reference key="source" ref="822060853"/>
+						<reference key="source" ref="372283332"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -410,7 +402,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">selectMine:</string>
-						<reference key="source" ref="335308572"/>
+						<reference key="source" ref="66482057"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -448,8 +440,8 @@
 							<reference ref="353237098"/>
 							<reference ref="828185291"/>
 							<reference ref="396200480"/>
-							<reference ref="822060853"/>
-							<reference ref="335308572"/>
+							<reference ref="372283332"/>
+							<reference ref="66482057"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -495,12 +487,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="822060853"/>
+						<reference key="object" ref="372283332"/>
 						<reference key="parent" ref="320383738"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="335308572"/>
+						<reference key="object" ref="66482057"/>
 						<reference key="parent" ref="320383738"/>
 					</object>
 				</array>
@@ -516,7 +508,7 @@
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="2" key="4.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<real value="0.0" key="4.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -528,7 +520,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">28</int>
+			<int key="maxID">30</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -543,26 +535,19 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ShareController</string>
 					<string key="superclassName">PPViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">changeGalleryFielter:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">changeGalleryFielter:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">changeGalleryFielter:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="clearButton">UIButton</string>
 						<string key="gallery">UITableView</string>
 						<string key="noDrawingLabel">UILabel</string>
-						<string key="paintsFilter">UIButton</string>
 						<string key="selectAllButton">UIButton</string>
 						<string key="selectMineButton">UIButton</string>
 						<string key="titleLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="clearButton">
+							<string key="name">clearButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="gallery">
 							<string key="name">gallery</string>
 							<string key="candidateClassName">UITableView</string>
@@ -570,10 +555,6 @@
 						<object class="IBToOneOutletInfo" key="noDrawingLabel">
 							<string key="name">noDrawingLabel</string>
 							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="paintsFilter">
-							<string key="name">paintsFilter</string>
-							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="selectAllButton">
 							<string key="name">selectAllButton</string>
@@ -604,9 +585,7 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="all@2x.png">{140, 74}</string>
 			<string key="back@2x.png">{74, 74}</string>
-			<string key="me@2x.png">{140, 74}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 			<string key="wood_bg@2x.png">{640, 960}</string>
 		</dictionary>
