--- a/Draw/Controller/Share/ShareController~iPad.xib
+++ b/Draw/Controller/Share/ShareController~iPad.xib
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="353237098"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -57,7 +56,6 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="921632836"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -71,7 +69,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{552, 13}, {168, 80}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="533394264"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -104,7 +101,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="942335936"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -126,10 +122,9 @@
 					<object class="IBUITableView" id="396200480">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{0, 277}, {768, 726}}</string>
+						<string key="NSFrame">{{0, 217}, {768, 787}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="822474594"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -148,7 +143,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{168, 28}, {403, 45}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="342817569"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -182,10 +176,9 @@
 					<object class="IBUILabel" id="822474594">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{158, 277}, {429, 45}}</string>
+						<string key="NSFrame">{{155, 277}, {429, 45}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="372283332"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -217,8 +210,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{605, 21}, {143, 60}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="822474594"/>
+						<reference key="NSNextKeyView" ref="372283332"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -245,7 +237,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{164, 133}, {220, 60}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="66482057"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -271,7 +262,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{384, 133}, {220, 60}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="396200480"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -288,7 +278,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="828185291"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -433,7 +422,6 @@
 						<reference key="object" ref="320383738"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="533394264"/>
-							<reference ref="822474594"/>
 							<reference ref="942335936"/>
 							<reference ref="342817569"/>
 							<reference ref="921632836"/>
@@ -442,6 +430,7 @@
 							<reference ref="396200480"/>
 							<reference ref="372283332"/>
 							<reference ref="66482057"/>
+							<reference ref="822474594"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -522,60 +511,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">30</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShareController</string>
-					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="clearButton">UIButton</string>
-						<string key="gallery">UITableView</string>
-						<string key="noDrawingLabel">UILabel</string>
-						<string key="selectAllButton">UIButton</string>
-						<string key="selectMineButton">UIButton</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="clearButton">
-							<string key="name">clearButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="gallery">
-							<string key="name">gallery</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="noDrawingLabel">
-							<string key="name">noDrawingLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="selectAllButton">
-							<string key="name">selectAllButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="selectMineButton">
-							<string key="name">selectMineButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShareController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
