--- a/Draw/Controller/Share/ShareEditController~iPad.xib
+++ b/Draw/Controller/Share/ShareEditController~iPad.xib
@@ -44,6 +44,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="491680879"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{0, 246}, {768, 758}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="342134113"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -70,6 +72,7 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="350137839"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -83,6 +86,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{14, 250}, {740, 711}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="268363428"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -97,6 +101,7 @@
 						<int key="NSvFlags">314</int>
 						<string key="NSFrame">{{7, 108}, {755, 133}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="306897565"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -106,6 +111,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{14, 11}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="6438040"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -142,6 +148,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{571, 15}, {180, 67}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="13410777"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -169,6 +176,7 @@
 						<int key="NSvFlags">314</int>
 						<string key="NSFrame">{{7, 108}, {754, 133}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1018434614"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -197,6 +205,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{44.5, 282}, {680, 640}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
@@ -205,6 +214,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{122, 26}, {403, 45}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="342380466"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -240,6 +250,7 @@
 						<int key="NSvFlags">-2147483334</int>
 						<string key="NSFrame">{{0, 203}, {768, 87}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="289642412"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -253,6 +264,7 @@
 						<int key="NSvFlags">-2147483329</int>
 						<string key="NSFrame">{{0, 100}, {768, 104}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="678441152"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -261,6 +273,7 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="426896309"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -371,12 +384,12 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickBack:</string>
+						<string key="label">clickBackButon:</string>
 						<reference key="source" ref="350137839"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">31</int>
+					<int key="connectionID">51</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -503,9 +516,77 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">50</int>
+			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShareEditController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="inputBackground">UIImageView</string>
+						<string key="myImageBackground">UIImageView</string>
+						<string key="myImageView">UIImageView</string>
+						<string key="paperBackground">UIImageView</string>
+						<string key="patternBar">UIImageView</string>
+						<string key="patternsGallery">UIScrollView</string>
+						<string key="shareButton">UIButton</string>
+						<string key="shareTextField">UITextView</string>
+						<string key="shareTitleLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="inputBackground">
+							<string key="name">inputBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="myImageBackground">
+							<string key="name">myImageBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="myImageView">
+							<string key="name">myImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="paperBackground">
+							<string key="name">paperBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="patternBar">
+							<string key="name">patternBar</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="patternsGallery">
+							<string key="name">patternsGallery</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareButton">
+							<string key="name">shareButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareTextField">
+							<string key="name">shareTextField</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareTitleLabel">
+							<string key="name">shareTitleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShareEditController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
